crates/service/tests/definition/snapshots/features__definition__goto_definition__type_use_int_idx.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 5
      },
      "end": {
        "line": 2,
        "character": 9
      }
    }
  }
]
